<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Vox Populi</string>
    <string name="default_user_name_stub">Войти в личный кабинет</string>

    <!--category names-->
    <string name="category_name_all">Все новости</string>
    <string name="category_name_business">Business</string>
    <string name="category_name_history">History</string>
    <string name="category_name_interview">Interview</string>
    <string name="category_name_vox_populi">Vox Populi</string>

    <!--keys for social networks-->
    <string name="facebook_app_id">741580999288129</string>
    <string name="facebook_secret">152ed9470cb88b3ef67fa03624ea6353</string>
    <string name="twitter_consumer_key">9z32hUU1nBBVpKxXhXTGts1oU</string>
    <string name="twitter_consumer_secret">e7TAVl0QkviwxnhMuxPyMzo8dGEXxMOVyBNYjgjlevej4Fnt6m</string>
    <string name="vk_app_id">4899846</string>
    <string name="vk_secret">c3cjWSMOXSgfbdWO6jYE</string>

    <string name="vox_url">http://www.voxpopuli.kz</string>

    <string name="settings_string">Настройки</string>
    <string name="rubrics_header_text">Рубрики</string>
    <string name="login_screen_header_text">Вход</string>
    <string name="password_restore_screen_header_text">Восстановление</string>
    <string name="registration_screen_header_text">Регистрация</string>
    <string name="edit_profile_screen_header_text">Редактирование</string>
    <string name="password_change_screen_header">Изменение пароля</string>
    <string name="article_comments_screen_header">Комментарии</string>

    <string name="search_bar_input_hint">Поиск</string>
    <string name="user_comments_text">Комментарии</string>
    <string name="most_popular">Обсуждают</string>
    <string name="most_share">Делятся</string>
    <string name="login_hint">E-mail</string>
    <string name="password_hint">Пароль</string>
    <string name="forgot_password_text">Забыли пароль?</string>
    <string name="create_account_btn_text">СОЗДАТЬ АККАУНТ</string>
    <string name="hide_password_string">Скрыть пароль</string>
    <string name="show_password_string">Показать пароль</string>
    <string name="registration_via_social">Регистрация через соцсети</string>
    <string name="user_name_hint">Имя</string>
    <string name="user_surname_hint">Фамилия</string>
    <string name="user_nick_hint">Никнейм</string>
    <string name="restore_password_hint">E-mail</string>
    <string name="restore_password_info_text">Введите ваш адресс электронной почты. \nСистема вышлет на него новый пароль.</string>

    <string name="settings_profile_header">Профиль</string>
    <string name="settings_profile_enter">Войти</string>
    <string name="settings_profile_edit_profile">Редактировать профиль</string>
    <string name="settings_profile_register">Регистрация</string>
    <string name="settings_profile_logout">Выйти</string>
    <string name="settings_info_header">Информация</string>
    <string name="settings_info_version">Версия приложения</string>
    <string name="settings_info_about">О проекте</string>
    <string name="settings_info_rules">Правила</string>
    <string name="settings_info_vacancy">Вакансии</string>

    <string name="edit_profile_change_passw_text">Изменить пароль</string>
    <string name="change_pasw_old_pasw_hint">Текущий пароль</string>
    <string name="change_pasw_new_pasw_hint">Новый пароль</string>

    <string name="user_data_saved_msg">Данные успешно обновлены.</string>
    <string name="success_post_to_social_msg">Вы успешно поделились статьей.</string>

    <string name="alert_dialog_color">#FFD10A00</string>
    <string name="error_dialog_title">Внимание</string>
    <string name="version_title">Версия приложения</string>
    <string name="about_title">О проекте</string>
    <string name="rules_title">Правила</string>
    <string name="vacans_title">Вакансии</string>

    <string name="social_dialog_title">Поделиться</string>
    <string name="social_dialog_fb">Facebook</string>
    <string name="social_dialog_tw">Twitter</string>
    <string name="social_dialog_goo">Google+</string>
    <string name="social_dialog_vkont">Вконтакте</string>

    <string name="string_search_header" formatted="false">Найдено %amount% новостей</string>
    <string name="forgot_password" formatted="false">Инструкция по восстановлению пароля выслана на указанный Вами e-mail</string>
    <string name="forgot_no_email" formatted="false">Не правильный e-mail</string>


    <string name="empty_field_alarm">Поля ввода не можут быть пустыми.\nПожалуйста, заполните необходимые поля.</string>
    <string name="network_unreachable_alarm">Сетевые подключения недоступны.\nПожалуйста, проверьте настройки подключений или попробуйте позже.</string>
    <string name="file_creation_alarm">Не удалось сохранить фото. Возможно на устройстве не достаточно свободного дискового пространства.</string>
    <string name="wrong_email_format_alarm">Введенный логин не является почтовый адресом.\nПожалуйста, введите коррекный почтовый адрес для использования в качестве Вашего логина.</string>
    <string name="wrong_password_length">Длинна введенного пароля не удовлетворяет установленный критерий.\nПожалуйста, введите пароль длинной не менее 5 символов.</string>
    <string name="unlogined_user_comment_alarm">Для отправки комментария Вам нужно войти в систему под своими именем и логином.\nЕсли Вы не зарегистрированны в системе, пожалуйста, пройдите процедуру регистрации.</string>
    <string name="unlogined_social_post_alarm">Вы не вошли на ресурс под пользователем этой сети.\nДля того, что бы поделится записью, пожалуйста, сначала войдите под пользователем нужно вам соцсети.</string>

    <string name="take_photo_dialog_item">Сделать фото</string>
    <string name="chose_photo_dialog_item">Выбрать из галереи</string>
    <string name="cancel_dialog_item">Отмена</string>
    <string name="add_photo_dialog_title">Добавить фото</string>

    <string name="cancel_button_text">Отмена</string>
    <string name="ok_button_text">ОК</string>
</resources>
