<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/login_page_side_padding"
        android:layout_marginRight="@dimen/login_page_side_padding">

        <com.devspark.robototextview.widget.RobotoEditText
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/registration_email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/edit_text_style"
            android:layout_marginTop="@dimen/login_page_side_padding"
            android:inputType="textEmailAddress"
            app:fontFamily="roboto"
            app:textWeight="normal"
            android:hint="@string/login_hint"
            />

        <com.devspark.robototextview.widget.RobotoEditText
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/registration_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/edit_text_style"
            android:layout_marginTop="@dimen/login_page_side_padding"
            app:fontFamily="roboto"
            app:textWeight="normal"
            android:hint="@string/user_name_hint"
            />

        <com.devspark.robototextview.widget.RobotoEditText
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/registration_surname_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/edit_text_style"
            android:layout_marginTop="@dimen/login_page_side_padding"
            app:fontFamily="roboto"
            app:textWeight="normal"
            android:hint="@string/user_surname_hint"
            />

        <com.devspark.robototextview.widget.RobotoEditText
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/registration_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/edit_text_style"
            android:layout_marginTop="@dimen/login_page_side_padding"
            app:fontFamily="roboto"
            app:textWeight="normal"
            android:hint="@string/password_hint"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/login_page_side_padding">
            <ImageButton
                android:id="@+id/login_password_hider"
                android:layout_width="@dimen/action_bar_icons_size"
                android:layout_height="@dimen/action_bar_icons_size"
                android:background="@drawable/ic_grey_checkbox"/>

            <com.devspark.robototextview.widget.RobotoTextView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/login_password_hider_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fontFamily="roboto"
                app:textWeight="normal"
                android:layout_marginLeft="@dimen/padding_16dp"
                style="@style/gray_info_text.size_14sp"
                android:text="@string/hide_password_string"
                />
        </LinearLayout>
        <com.devspark.robototextview.widget.RobotoTextView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/registration_social_text_top_margin"
            app:fontFamily="roboto"
            app:textWeight="normal"
            style="@style/gray_info_text.size_14sp"
            android:text="@string/registration_via_social"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/registration_social_block_top_margin"
            android:layout_marginBottom="@dimen/registration_social_block_bottom_margin">
            <ImageButton
                android:id="@+id/login_facebook"
                android:layout_width="@dimen/social_button_size"
                android:layout_height="@dimen/social_button_size"
                android:background="@drawable/vox_social_facebook"
                android:layout_marginRight="@dimen/social_margin_right"/>
            <ImageButton
                android:id="@+id/login_twitter"
                android:layout_width="@dimen/social_button_size"
                android:layout_height="@dimen/social_button_size"
                android:background="@drawable/vox_social_tweeter"
                android:layout_marginRight="@dimen/social_margin_right"/>
            <ImageButton
                android:id="@+id/login_google"
                android:layout_width="@dimen/social_button_size"
                android:layout_height="@dimen/social_button_size"
                android:background="@drawable/vox_social_gplus"
                android:layout_marginRight="@dimen/social_margin_right"/>
            <ImageButton
                android:id="@+id/login_vk"
                android:layout_width="@dimen/social_button_size"
                android:layout_height="@dimen/social_button_size"
                android:background="@drawable/vox_social_vk"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
