<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.devspark.robototextview.widget.RobotoTextView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_page_side_padding"
            android:layout_marginRight="@dimen/login_page_side_padding"
            android:layout_marginTop="@dimen/settings_profile_section_top_margin"
            android:layout_marginBottom="@dimen/settings_profile_section_top_margin"
            style="@style/gray_info_text.size_14sp"
            app:fontFamily="roboto"
            app:textWeight="normal"
            android:text="@string/settings_profile_header"/>

        <RelativeLayout
            android:id="@+id/settings_enter_place"
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_item_height"
            android:background="@drawable/category_item_selector">
            <com.devspark.robototextview.widget.RobotoTextView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/login_page_side_padding"
                style="@style/dark_grey_info_text"
                app:fontFamily="roboto"
                app:textWeight="normal"
                android:text="@string/settings_profile_enter"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding_1dp"
                android:layout_marginLeft="@dimen/login_page_side_padding"
                android:layout_alignParentBottom="true"
                android:background="@color/side_bar_divider_color">
            </View>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/settings_register_place"
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_item_height"
            android:background="@drawable/category_item_selector">
            <com.devspark.robototextview.widget.RobotoTextView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/login_page_side_padding"
                style="@style/dark_grey_info_text"
                app:fontFamily="roboto"
                app:textWeight="normal"
                android:text="@string/settings_profile_register"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding_1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/side_bar_divider_color">
            </View>
        </RelativeLayout>
        <com.devspark.robototextview.widget.RobotoTextView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_page_side_padding"
            android:layout_marginRight="@dimen/login_page_side_padding"
            android:layout_marginTop="@dimen/settings_item_text_upper_margin"
            android:layout_marginBottom="@dimen/settings_profile_section_top_margin"
            style="@style/gray_info_text.size_14sp"
            app:fontFamily="roboto"
            app:textWeight="normal"
            android:text="@string/settings_profile_header"/>
        <RelativeLayout
            android:id="@+id/settings_version_place"
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_item_height"
            android:background="@drawable/category_item_selector">
            <com.devspark.robototextview.widget.RobotoTextView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/login_page_side_padding"
                style="@style/dark_grey_info_text"
                app:fontFamily="roboto"
                app:textWeight="normal"
                android:text="@string/settings_info_version"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding_1dp"
                android:layout_marginLeft="@dimen/login_page_side_padding"
                android:layout_alignParentBottom="true"
                android:background="@color/side_bar_divider_color">
            </View>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/settings_about_place"
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_item_height"
            android:background="@drawable/category_item_selector">
            <com.devspark.robototextview.widget.RobotoTextView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/login_page_side_padding"
                style="@style/dark_grey_info_text"
                app:fontFamily="roboto"
                app:textWeight="normal"
                android:text="@string/settings_info_about"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding_1dp"
                android:layout_marginLeft="@dimen/login_page_side_padding"
                android:layout_alignParentBottom="true"
                android:background="@color/side_bar_divider_color">
            </View>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/settings_rules_place"
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_item_height"
            android:background="@drawable/category_item_selector">
            <com.devspark.robototextview.widget.RobotoTextView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/login_page_side_padding"
                style="@style/dark_grey_info_text"
                app:fontFamily="roboto"
                app:textWeight="normal"
                android:text="@string/settings_info_rules"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding_1dp"
                android:layout_marginLeft="@dimen/login_page_side_padding"
                android:layout_alignParentBottom="true"
                android:background="@color/side_bar_divider_color">
            </View>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/settings_vacancy_place"
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_item_height"
            android:background="@drawable/category_item_selector">
            <com.devspark.robototextview.widget.RobotoTextView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/dark_grey_info_text"
                android:layout_marginLeft="@dimen/login_page_side_padding"
                app:fontFamily="roboto"
                app:textWeight="normal"
                android:text="@string/settings_info_vacancy"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding_1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/side_bar_divider_color">
            </View>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>