<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.devspark.robototextview.widget.RobotoTextView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/login_password_recover_hint"
            style="@style/gray_info_text.size_14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_page_side_padding"
            android:layout_marginRight="@dimen/login_page_side_padding"
            android:layout_marginTop="@dimen/login_page_side_padding"
            app:fontFamily="roboto"
            app:textWeight="normal"
            android:visibility="gone"/>
        <com.devspark.robototextview.widget.RobotoEditText
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/login_login_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            style="@style/edit_text_style"
            android:layout_marginLeft="@dimen/login_page_side_padding"
            android:layout_marginRight="@dimen/login_page_side_padding"
            android:layout_marginTop="@dimen/login_page_side_padding"
            android:inputType="textEmailAddress"
            app:fontFamily="roboto"
            app:textWeight="normal"
            android:hint="@string/login_hint"
            />
        <com.devspark.robototextview.widget.RobotoEditText
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/login_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            style="@style/edit_text_style"
            android:layout_marginLeft="@dimen/login_page_side_padding"
            android:layout_marginRight="@dimen/login_page_side_padding"
            android:layout_marginTop="@dimen/login_page_side_padding"
            app:fontFamily="roboto"
            app:textWeight="normal"
            android:hint="@string/password_hint"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/login_page_side_padding"
            android:layout_marginLeft="@dimen/login_page_side_padding"
            android:layout_marginRight="@dimen/login_page_side_padding">
            <ImageButton
                android:id="@+id/login_password_hider"
                android:layout_width="@dimen/action_bar_icons_size"
                android:layout_height="@dimen/action_bar_icons_size"
                android:background="@drawable/ic_grey_checkbox"/>

            <com.devspark.robototextview.widget.RobotoTextView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/login_password_hider_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fontFamily="roboto"
                app:textWeight="normal"
                android:layout_marginLeft="@dimen/padding_16dp"
                style="@style/gray_info_text.size_14sp"
                android:text="@string/hide_password_string"
                />
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_page_side_padding"
            android:layout_marginRight="@dimen/login_page_side_padding"
            android:gravity="center">
            <com.devspark.robototextview.widget.RobotoTextView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/login_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fontFamily="roboto"
                app:textWeight="normal"
                style="@style/forgot_password_style"
                android:text="@string/forgot_password_text"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_page_side_padding"
            android:layout_marginRight="@dimen/login_page_side_padding"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/login_social_box_bottom_margin">
            <ImageButton
                android:id="@+id/login_facebook"
                android:layout_width="@dimen/social_button_size"
                android:layout_height="@dimen/social_button_size"
                android:background="@drawable/vox_social_facebook"
                android:layout_marginRight="@dimen/social_margin_right"/>
            <ImageButton
                android:id="@+id/login_twitter"
                android:layout_width="@dimen/social_button_size"
                android:layout_height="@dimen/social_button_size"
                android:background="@drawable/vox_social_tweeter"
                android:layout_marginRight="@dimen/social_margin_right"/>
            <ImageButton
                android:id="@+id/login_google"
                android:layout_width="@dimen/social_button_size"
                android:layout_height="@dimen/social_button_size"
                android:background="@drawable/vox_social_gplus"
                android:layout_marginRight="@dimen/social_margin_right"/>
            <ImageButton
                android:id="@+id/login_vk"
                android:layout_width="@dimen/social_button_size"
                android:layout_height="@dimen/social_button_size"
                android:background="@drawable/vox_social_vk"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_light_grey">
        </View>
        <com.devspark.robototextview.widget.RobotoButton
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/login_create_account_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fontFamily="roboto"
            app:textWeight="normal"
            style="@style/create_account_btn_style"
            android:text="@string/create_account_btn_text"
            android:background="@drawable/hdpi_button_white" />

    </LinearLayout>
</ScrollView>
